--- a/index.html
+++ b/index.html
@@ -7,101 +7,115 @@
 		<title>WebStudio</title>
 		<link rel="stylesheet" href="./styles/styles.css" />
 	</head>
-	<body>
+	<body class="body">
 		<!-- Header-->
-		<header>
-			<nav>
-				<a href="/">
-					<span>Web</span>
+		<header class="header">
+			<nav class="header-nav">
+				<a class="logo" href="/">
+					<span class="logo-text">Web</span>
 					Studio
 				</a>
-				<ul>
-					<li><a href="./studio.html">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+				<ul class="header-nav-list">
+					<li class="header-nav-item"><a href="./studio.html">Студия</a></li>
+					<li class="header-nav-item"><a href="./portfolio.html">Портфолио</a></li>
+					<li class="header-nav-item"><a href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="contact-list">
+				<li class="contact-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li class="contact-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
-		<main>
+		<main class="main">
 			<!--Hero-->
-			<section>
-				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button type="button">Заказать услугу</button>
+			<section class="section-hero">
+				<h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+				<button class="hero-btn" type="button">Заказать услугу</button>
 			</section>
 			<!--Advantage-->
-			<section>
-				<h2 hidden>Advantage</h2>
-				<ul>
-					<li>
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+			<section class="section-advantage">
+				<h2 class="advantage-title" hidden>Advantage</h2>
+				<ul class="advantage-list">
+					<li class="advantage-item">
+						<h3 class="advantage-item-title">Внимание к деталям</h3>
+						<p class="advantage-item-text">
+							Идейные соображения, а также начало повседневной работы по формированию позиции.
+						</p>
 					</li>
-					<li>
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+					<li class="advantage-item">
+						<h3 class="advantage-item-title">Пунктуальность</h3>
+						<p class="advantage-item-text">
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
 					</li>
-					<li>
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					<li class="advantage-item">
+						<h3 class="advantage-item-title">Планирование</h3>
+						<p class="advantage-item-text">
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
 					</li>
-					<li>
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					<li class="advantage-item">
+						<h3 class="advantage-item-title">Современные технологии</h3>
+						<p class="advantage-item-text">
+							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+						</p>
 					</li>
 				</ul>
 			</section>
 			<!--Services-->
-			<section>
-				<h2>Чем мы занимаемся</h2>
-				<ul>
-					<li><img src="./images/services/box_1.jpeg" alt="Пишем код" width="370" /></li>
-					<li><img src="./images/services/box_2.jpeg" alt="Делаем верстку" width="370" /></li>
-					<li><img src="./images/services/box_3.jpeg" alt="Делаем дизайн" width="370" /></li>
+			<section class="section-services">
+				<h2 class="services-title">Чем мы занимаемся</h2>
+				<ul class="services-list">
+					<li class="services-item">
+						<img class="services-item-img" src="./images/services/box_1.jpeg" alt="Пишем код" width="370" />
+					</li>
+					<li class="services-item">
+						<img class="services-item-img" src="./images/services/box_2.jpeg" alt="Делаем верстку" width="370" />
+					</li>
+					<li class="services-item">
+						<img class="services-item-img" src="./images/services/box_3.jpeg" alt="Делаем дизайн" width="370" />
+					</li>
 				</ul>
 			</section>
 			<!--Team-->
-			<section>
-				<h2>Наша команда</h2>
-				<ul>
-					<li>
-						<img src="./images/team/img_1.jpeg" alt="Игорь Демьяненко" width="270" />
-						<h3>Игорь Демьяненко</h3>
-						<p lang="eu">Product Designer</p>
+			<section class="section-team">
+				<h2 class="team-title">Наша команда</h2>
+				<ul class="team-list">
+					<li class="team-item">
+						<img class="team-item-img" src="./images/team/img_1.jpeg" alt="Игорь Демьяненко" width="270" />
+						<h3 class="team-item-title">Игорь Демьяненко</h3>
+						<p class="team-item-text" lang="eu">Product Designer</p>
 					</li>
-					<li>
-						<img src="./images/team/img_2.jpeg" alt="Ольга Репина" width="270" />
-						<h3>Ольга Репина</h3>
-						<p lang="eu">Frontend Developer</p>
+					<li class="team-item">
+						<img class="team-item-img" src="./images/team/img_2.jpeg" alt="Ольга Репина" width="270" />
+						<h3 class="team-item-title">Ольга Репина</h3>
+						<p class="team-item-text" lang="eu">Frontend Developer</p>
 					</li>
-					<li>
-						<img src="./images/team/img_3.jpeg" alt="Николай Тарасов" width="270" />
-						<h3>Николай Тарасов</h3>
-						<p lang="eu">Marketing</p>
+					<li class="team-item">
+						<img class="team-item-img" src="./images/team/img_3.jpeg" alt="Николай Тарасов" width="270" />
+						<h3 class="team-item-title">Николай Тарасов</h3>
+						<p class="team-item-text" lang="eu">Marketing</p>
 					</li>
-					<li>
-						<img src="./images/team/img_4.jpeg" alt="Михаил Ермаков" width="270" />
-						<h3>Михаил Ермаков</h3>
-						<p lang="eu">UI Designer</p>
+					<li class="team-item">
+						<img class="team-item-img" src="./images/team/img_4.jpeg" alt="Михаил Ермаков" width="270" />
+						<h3 class="team-item-title">Михаил Ермаков</h3>
+						<p class="team-item-text" lang="eu">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<!--Footer-->
-		<footer>
-			<a href="/">
-				<span>Web</span>
+		<footer class="footer">
+			<a class="logo" href="/">
+				<span class="logo-text">Web</span>
 				Studio
 			</a>
-			<address>
-				<p>г. Киев, пр-т Леси Украинки, 26</p>
+			<address class="address">
+				<p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
 				<br />
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				<br />
-				<a href="tel:+380961111111">+38 096 111 11 11</a>
+				<a class="address-phone" href="tel:+380961111111">+38 096 111 11 11</a>
 			</address>
 		</footer>
 	</body>
