--- a/portfolio.html
+++ b/portfolio.html
@@ -7,97 +7,97 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="./styles/styles.css" />
 	</head>
-	<body>
+	<body class="body">
 		<!-- Header-->
-		<header>
-			<nav>
-				<a href="/">
-					<span>Web</span>
+		<header class="header">
+			<nav class="header-nav">
+				<a class="logo" href="/">
+					<span class="logo-text">Web</span>
 					Studio
 				</a>
-				<ul>
-					<li><a href="./studio.html">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+				<ul class="header-nav-list">
+					<li class="header-nav-item"><a href="./studio.html">Студия</a></li>
+					<li class="header-nav-item"><a href="./portfolio.html">Портфолио</a></li>
+					<li class="header-nav-item"><a href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="contact-list">
+				<li class="contact-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li class="contact-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
-		<main>
+		<main class="main">
 			<!--Portfolio-->
-			<section>
-				<h1 hidden>Portfolio</h1>
-				<ul>
-					<li><a href="">Все</a></li>
-					<li><a href="">Веб-сайты</a></li>
-					<li><a href="">Приложения</a></li>
-					<li><a href="">Дизайн</a></li>
-					<li><a href="">Маркетинг</a></li>
+			<section class="section-portfolio">
+				<h1 class="portfolio-title" hidden>Portfolio</h1>
+				<ul class="portfolio-filter-list">
+					<li class="portfolio-filter-item"><a href="">Все</a></li>
+					<li class="portfolio-filter-item"><a href="">Веб-сайты</a></li>
+					<li class="portfolio-filter-item"><a href="">Приложения</a></li>
+					<li class="portfolio-filter-item"><a href="">Дизайн</a></li>
+					<li class="portfolio-filter-item"><a href="">Маркетинг</a></li>
 				</ul>
-				<ul>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+				<ul class="portfolio-list">
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
-					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+					<li class="portfolio-item">
+						<img class="portfolio-item-img" src="" alt="" />
+						<h2 class="portfolio-item-title"></h2>
+						<p class="portfolio-item-text"></p>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<!--Footer-->
-		<footer>
-			<a href="/">
-				<span>Web</span>
+		<footer class="footer">
+			<a class="logo" href="/">
+				<span class="logo-text">Web</span>
 				Studio
 			</a>
-			<address>
-				<p>г. Киев, пр-т Леси Украинки, 26</p>
+			<address class="address">
+				<p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
 				<br />
-				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				<br />
-				<a href="tel:+380961111111">+38 096 111 11 11</a>
+				<a class="address-phone" href="tel:+380961111111">+38 096 111 11 11</a>
 			</address>
 		</footer>
 	</body>
