--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
 			<!--Portfolio-->
 			<section class="section-portfolio">
 				<h1 class="portfolio-title" hidden>Portfolio</h1>
+				<!-- Change for tag button!!!!!!!!!!!!!!!!!-->
 				<ul class="portfolio-filter-list">
 					<li class="portfolio-filter-item"><a href="">Все</a></li>
 					<li class="portfolio-filter-item"><a href="">Веб-сайты</a></li>
@@ -39,49 +40,64 @@
 				</ul>
 				<ul class="portfolio-list">
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="./images/portfolio/img_1.jpeg" alt="Технокряк" width="370" />
+						<h2 class="portfolio-item-title">Технокряк</h2>
+						<p class="portfolio-item-text">Веб-сайт</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img
+							class="portfolio-item-img"
+							src="./images/portfolio/img_2.jpeg"
+							alt="Постер New Orlean vs Golden Star"
+							width="370"
+						/>
+						<h2 class="portfolio-item-title">Постер New Orlean vs Golden Star</h2>
+						<p class="portfolio-item-text">Дизайн</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="./images/portfolio/img_3.jpeg" alt="Ресторан Seafood" width="370" />
+						<h2 class="portfolio-item-title">Ресторан Seafood</h2>
+						<p class="portfolio-item-text">Приложение</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="/images/portfolio/img_4.jpeg" alt="Проект Prime" width="370" />
+						<h2 class="portfolio-item-title">Проект Prime</h2>
+						<p class="portfolio-item-text">Маркетинг</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="./images/portfolio/img_5.jpeg" alt="Проект Boxes" width="370" />
+						<h2 class="portfolio-item-title">Проект Boxes</h2>
+						<p class="portfolio-item-text">Приложение</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img
+							class="portfolio-item-img"
+							src="./images/portfolio/img_6.jpeg"
+							alt="'Inspiration has no Borders"
+							width="370"
+						/>
+						<h2 class="portfolio-item-title" lang="eu">Inspiration has no Borders</h2>
+						<p class="portfolio-item-text">Веб-сайт</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img
+							class="portfolio-item-img"
+							src="./images/portfolio/img_7.jpeg"
+							alt="Издание Limited Edition"
+							width="370"
+						/>
+						<h2 class="portfolio-item-title">Издание Limited Edition</h2>
+						<p class="portfolio-item-text">Дизайн</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="./images/portfolio/img_8.jpeg" alt="Проект LAB" width="370" />
+						<h2 class="portfolio-item-title">Проект LAB</h2>
+						<p class="portfolio-item-text">Маркетинг</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="" alt="" />
-						<h2 class="portfolio-item-title"></h2>
-						<p class="portfolio-item-text"></p>
+						<img class="portfolio-item-img" src="./images/portfolio/img_9.jpeg" alt="Growing Business" width="370" />
+						<h2 class="portfolio-item-title" lang="eu">Growing Business</h2>
+						<p class="portfolio-item-text">Приложение</p>
 					</li>
 				</ul>
 			</section>
