--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 					Studio
 				</a>
 				<ul class="header-nav-list">
-					<li class="header-nav-item"><a href="./studio.html">Студия</a></li>
+					<li class="header-nav-item"><a href="./index.html">Студия</a></li>
 					<li class="header-nav-item"><a href="./portfolio.html">Портфолио</a></li>
 					<li class="header-nav-item"><a href="">Контакты</a></li>
 				</ul>
@@ -30,13 +30,12 @@
 			<!--Portfolio-->
 			<section class="section-portfolio">
 				<h1 class="portfolio-title" hidden>Portfolio</h1>
-				<!-- Change for tag button!!!!!!!!!!!!!!!!!-->
 				<ul class="portfolio-filter-list">
-					<li class="portfolio-filter-item"><a href="">Все</a></li>
-					<li class="portfolio-filter-item"><a href="">Веб-сайты</a></li>
-					<li class="portfolio-filter-item"><a href="">Приложения</a></li>
-					<li class="portfolio-filter-item"><a href="">Дизайн</a></li>
-					<li class="portfolio-filter-item"><a href="">Маркетинг</a></li>
+					<li class="portfolio-filter-item"><button class="filter-btn" type="button">Все</button></li>
+					<li class="portfolio-filter-item"><button class="filter-btn" type="button">Веб-сайты</button></li>
+					<li class="portfolio-filter-item"><button class="filter-btn" type="button">Приложения</button></li>
+					<li class="portfolio-filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+					<li class="portfolio-filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
 				</ul>
 				<ul class="portfolio-list">
 					<li class="portfolio-item">
