--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					Studio
 				</a>
 				<ul class="header-nav-list">
-					<li class="header-nav-item"><a href="./studio.html">Студия</a></li>
+					<li class="header-nav-item"><a href="./index.html">Студия</a></li>
 					<li class="header-nav-item"><a href="./portfolio.html">Портфолио</a></li>
 					<li class="header-nav-item"><a href="">Контакты</a></li>
 				</ul>
