--- a/index.html
+++ b/index.html
@@ -5,25 +5,37 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
-		<link rel="stylesheet" href="./styles/styles.css" />
+		<!-- Fonts start -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Fonts end -->
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body class="body">
 		<!-- Header-->
 		<header class="header">
 			<nav class="header-nav">
-				<a class="logo" href="/">
+				<a class="logo link" href="/">
 					<span class="logo-text">Web</span>
 					Studio
 				</a>
-				<ul class="header-nav-list">
-					<li class="header-nav-item"><a href="./index.html">Студия</a></li>
-					<li class="header-nav-item"><a href="./portfolio.html">Портфолио</a></li>
-					<li class="header-nav-item"><a href="">Контакты</a></li>
+				<ul class="header-nav-list list">
+					<li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студия</a></li>
+					<li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
+					<li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul class="contact-list">
-				<li class="contact-mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li class="contact-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="contact-list list">
+				<li class="contact-mail">
+					<a class="contact-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				</li>
+				<li class="contact-phone">
+					<a class="contact-phone-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
 			</ul>
 		</header>
 		<main class="main">
@@ -35,7 +47,7 @@
 			<!--Advantage-->
 			<section class="section-advantage">
 				<h2 class="advantage-title" hidden>Advantage</h2>
-				<ul class="advantage-list">
+				<ul class="advantage-list list">
 					<li class="advantage-item">
 						<h3 class="advantage-item-title">Внимание к деталям</h3>
 						<p class="advantage-item-text">
@@ -65,7 +77,7 @@
 			<!--Services-->
 			<section class="section-services">
 				<h2 class="services-title">Чем мы занимаемся</h2>
-				<ul class="services-list">
+				<ul class="services-list list">
 					<li class="services-item">
 						<img class="services-item-img" src="./images/services/box_1.jpeg" alt="Пишем код" width="370" />
 					</li>
@@ -80,7 +92,7 @@
 			<!--Team-->
 			<section class="section-team">
 				<h2 class="team-title">Наша команда</h2>
-				<ul class="team-list">
+				<ul class="team-list list">
 					<li class="team-item">
 						<img class="team-item-img" src="./images/team/img_1.jpeg" alt="Игорь Демьяненко" width="270" />
 						<h3 class="team-item-title">Игорь Демьяненко</h3>
@@ -106,16 +118,16 @@
 		</main>
 		<!--Footer-->
 		<footer class="footer">
-			<a class="logo" href="/">
+			<a class="logo link" href="/">
 				<span class="logo-text">Web</span>
 				Studio
 			</a>
 			<address class="address">
 				<p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
 				<br />
-				<a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 				<br />
-				<a class="address-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+				<a class="address-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
 			</address>
 		</footer>
 	</body>
