adds final commit hw-2

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 					Studio
 				</a>
 				<ul class="header-nav-list list">
-					<li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Студия</a></li>
+					<li class="header-nav-item">
+						<a class="header-nav-link header-nav-link-current link" href="./index.html">Студия</a>
+					</li>
 					<li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Портфолио</a></li>
 					<li class="header-nav-item"><a class="header-nav-link link" href="">Контакты</a></li>
 				</ul>
@@ -119,15 +121,28 @@
 		<!--Footer-->
 		<footer class="footer">
 			<a class="logo link" href="/">
-				<span class="logo-text">Web</span>
-				Studio
+				<span class="logo-text-accent">Web</span>
+				<span class="logo-text-white">Studio</span>
 			</a>
 			<address class="address">
-				<p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-				<br />
-				<a class="address-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-				<br />
-				<a class="address-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+				<ul class="address-list list">
+					<li class="address-item">
+						<a
+							class="address-link-map link"
+							href="https://goo.gl/maps/JFS6MScitY3bDVhKA"
+							rel="noopener nofollow"
+							target="_blank"
+						>
+							г. Киев, пр-т Леси Украинки, 26
+						</a>
+					</li>
+					<li class="address-item">
+						<a class="address-link-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					</li>
+					<li class="address-item">
+						<a class="address-link-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+					</li>
+				</ul>
 			</address>
 		</footer>
 	</body>
