--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 		<header class="header">
 			<nav class="header-nav">
 				<a class="logo link" href="/">
-					<span class="logo-text">Web</span>
-					Studio
-				</a>
+					<span class="logo-text">Web</span>Studio</a>
 				<ul class="header-nav-list list">
 					<li class="header-nav-item">
 						<a class="header-nav-link header-nav-link-current link" href="./index.html">Студия</a>
