adds final commit ccs hw-2

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,22 +62,22 @@
 							alt="Постер New Orlean vs Golden Star"
 							width="370"
 						/>
-						<h2 class="portfolio-item-title">Постер New Orlean vs Golden Star</h2>
+						<h2 class="portfolio-item-title">Постер <span lang="eu">New Orlean vs Golden Star</span></h2>
 						<p class="portfolio-item-text">Дизайн</p>
 					</li>
 					<li class="portfolio-item">
 						<img class="portfolio-item-img" src="./images/portfolio/img_3.jpeg" alt="Ресторан Seafood" width="370" />
-						<h2 class="portfolio-item-title">Ресторан Seafood</h2>
+						<h2 class="portfolio-item-title">Ресторан <span lang="eu">Seafood</span></h2>
 						<p class="portfolio-item-text">Приложение</p>
 					</li>
 					<li class="portfolio-item">
-						<img class="portfolio-item-img" src="/images/portfolio/img_4.jpeg" alt="Проект Prime" width="370" />
-						<h2 class="portfolio-item-title">Проект Prime</h2>
+						<img class="portfolio-item-img" src="./images/portfolio/img_4.jpeg" alt="Проект Prime" width="370" />
+						<h2 class="portfolio-item-title">Проект <span lang="eu">Prime</span></h2>
 						<p class="portfolio-item-text">Маркетинг</p>
 					</li>
 					<li class="portfolio-item">
 						<img class="portfolio-item-img" src="./images/portfolio/img_5.jpeg" alt="Проект Boxes" width="370" />
-						<h2 class="portfolio-item-title">Проект Boxes</h2>
+						<h2 class="portfolio-item-title">Проект <span lang="eu">Boxes</span></h2>
 						<p class="portfolio-item-text">Приложение</p>
 					</li>
 					<li class="portfolio-item">
@@ -97,12 +97,12 @@
 							alt="Издание Limited Edition"
 							width="370"
 						/>
-						<h2 class="portfolio-item-title">Издание Limited Edition</h2>
+						<h2 class="portfolio-item-title">Издание <span lang="eu">Limited Edition</span></h2>
 						<p class="portfolio-item-text">Дизайн</p>
 					</li>
 					<li class="portfolio-item">
 						<img class="portfolio-item-img" src="./images/portfolio/img_8.jpeg" alt="Проект LAB" width="370" />
-						<h2 class="portfolio-item-title">Проект LAB</h2>
+						<h2 class="portfolio-item-title">Проект <span lang="eu">LAB</span></h2>
 						<p class="portfolio-item-text">Маркетинг</p>
 					</li>
 					<li class="portfolio-item">
