adds final commit css hw-2

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,9 +116,7 @@
 		<!--Footer-->
 		<footer class="footer">
 			<a class="logo link" href="/">
-				<span class="logo-text-accent">Web</span>
-				<span class="logo-text-white">Studio</span>
-			</a>
+				<span class="logo-text-accent">Web</span><span class="logo-text-white">Studio</span></a>
 			<address class="address">
 				<ul class="address-list list">
 					<li class="address-item">
